// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolTip snapshots Renders a gene properly 1`] = `
.c2 {
  width: 240px;
}

.c2 a:hover {
  color: black;
}

.c10 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 10px;
  line-height: 1.4em;
  color: #cccccc;
}

.c10 a {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid #e5e5e5;
  line-height: 1em;
}

.c6 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
  margin: 10px 0;
}

.c6 p {
  margin: 0;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  border: 1px solid #e5e5e5;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  width: 80px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  cursor: pointer;
}

.c8:hover {
  border-color: black;
  background: black;
  color: white;
}

.c3 {
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
}

.c5 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 1.4em;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
}

.c4 {
  width: 100%;
  margin-bottom: 10px;
  max-height: 160px;
  object-fit: cover;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  position: relative;
}

.c13 {
  position: absolute;
  left: 0;
  top: 0;
  width: 0;
  height: 0;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  border-top: 20px solid white;
  z-index: 1;
}

.c14 {
  position: absolute;
  top: 5px;
  left: 5px;
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 15px solid white;
  -webkit-filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
  filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
}

.c0 {
  position: absolute;
  bottom: 95%;
  z-index: 1;
  left: 0px;
}

.c1 {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
  padding: 20px;
  background: white;
  margin-bottom: 15px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 a {
  background-image: none;
}

.c1 .c11 {
  bottom: -15px;
  left: calc(50% - 30px);
}

<div
  className="c0"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <a
        className="c3"
        href="gene/capitalist-realism"
        target="_blank"
      >
        <img
          className="c4"
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&width=240&height=160&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FKX6a5mdTJd5cVrqCC-yb9A%2Fthumb.jpg"
        />
        <div
          className="c5"
        >
          Capitalist Realism
        </div>
        <div
          className="c6"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span><span><p><em>“Capitalist Realism was another form of provocation. This term somehow attacked both sides: It made Socialist Realism look ridiculous, and did the same to the possibility of Capitalist Realism as well.” —</em></p><p>Capitalist Realism was launched in 1963 in Germany by the artists , , and Konrad Lueg (later to become the dealer Konrad Fischer) not as a movement, but rather as a send-up. Its most iconic expression was a performance titled “Living with Pop – A Demonstration for Capitalist Realism,” orchestrated by Richter and Lueg in the Berges department store in Dusseldorf that same year. The artists invited patrons to come view “what is hailed in America as the greatest breakthrough in art since Cubism,” as an advertisement for the event proclaimed. Puzzled visitors arrived to find the artists making themselves at home in a staged and decidedly average living room (Richter was reading a mystery novel). Of course Capitalist Realism had no such reputation in the U.S.; the artists were parodying the overnight ascendance of , with its celebrity culture and embrace of everyday commodities, as well as the German craze for all things American. Against the backdrop of the Cold War and a divided Germany, the fake movement’s title also alluded to the Soviet doctrine of . The concerns of so-called Capitalist Realism—heavy-handed irony, investigation of the political aspects of consumerism, and critique of popular culture—have been seen by some as predecessors to a German strain of Pop Art, though the existence thereof is, itself, debatable.</p></span></span>",
              }
            }
          />
        </div>
      </a>
      <div
        className="c7"
      >
        <div
          className="c8"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          Follow
        </div>
        <div
          className="c9 c10"
        >
          <span>
            This is a new feature. 
          </span>
          <a
            href="mailto:productfeedback@artsy.net?subject=Feedback on 'Article Tooltips'"
            target="_blank"
          >
            Tell us what you think.
          </a>
        </div>
      </div>
    </div>
    <div
      className="c11 c12"
    >
      <div
        className="c13"
      />
      <div
        className="c14"
      />
    </div>
  </div>
</div>
`;

exports[`ToolTip snapshots Renders an artist properly 1`] = `
.c2 {
  width: 320px;
}

.c11 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 10px;
  line-height: 1.4em;
  color: #cccccc;
}

.c11 a {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid #e5e5e5;
  line-height: 1em;
}

.c10 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
  margin: 10px 0;
}

.c10 p {
  margin: 0;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 15px;
  line-height: 1.25em;
  -webkit-font-smoothing: antialiased;
}

.c9 {
  border: 1px solid #e5e5e5;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  width: 80px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  cursor: pointer;
}

.c9:hover {
  border-color: black;
  background: black;
  color: white;
}

.c3 {
  position: relative;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
}

.c3 a:hover {
  color: black;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 1.4em;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
}

.c8 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
}

.c4 {
  width: 100%;
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  position: relative;
}

.c14 {
  position: absolute;
  left: 0;
  top: 0;
  width: 0;
  height: 0;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  border-top: 20px solid white;
  z-index: 1;
}

.c15 {
  position: absolute;
  top: 5px;
  left: 5px;
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 15px solid white;
  -webkit-filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
  filter: drop-shadow(0 0 4px rgba(0,0,0,0.15));
}

.c0 {
  position: absolute;
  bottom: 95%;
  z-index: 1;
  left: 0px;
}

.c1 {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
  padding: 20px;
  background: white;
  margin-bottom: 15px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 a {
  background-image: none;
}

.c1 .c12 {
  bottom: -15px;
  left: calc(50% - 30px);
}

<div
  className="c0"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <a
          className="c4"
          href="/artist/nick-mauss"
        >
          <img
            height={148}
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=152&height=200&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FeYGNRMFqIirK-962fSOAsw%2Flarge.jpg"
            width={112}
          />
          <img
            height={148}
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=258&height=200&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F_lnI3nNFEo6D9TFqm2oM1w%2Flarge.jpg"
            width={190}
          />
        </a>
        <div
          className="c5"
        >
          <a
            className="c6"
            href="/artist/nick-mauss"
            target="_blank"
          >
            <div
              className="c7"
            >
              Nick Mauss
            </div>
            <div
              className="c8"
            >
              American, b. 1980
            </div>
          </a>
          <div
            className="c9"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            Follow
          </div>
        </div>
        <a
          href="/artist/nick-mauss"
          target="_blank"
        >
          <div
            className="c10"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<span><span><p>Nick Mauss makes drawings, prints, and paintings that often take on sculptural presence in their presentation; his 2012 large-scale series of  prints on aluminum sheeting were propped against the wall, folded to stand upright, or rolled up on the ground, revealing only parts of the printed image. Mauss creates his works using a variety of materials, including ceramic tablets, glaze, ink, acrylic, wooden panels, paper, and velvet appliqué, in the case of his 2012 Whitney Biennial installation. He also uses a range of techniques to apply marks and color, including rubbing, rasping, stenciling, and scraping, in addition to silkscreening and printing. His works have a common interest in the presentation of memory and repetition.</p></span></span>",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="c11"
      >
        <span>
          This is a new feature. 
        </span>
        <a
          href="mailto:productfeedback@artsy.net?subject=Feedback on 'Article Tooltips'"
          target="_blank"
        >
          Tell us what you think.
        </a>
      </div>
    </div>
    <div
      className="c12 c13"
    >
      <div
        className="c14"
      />
      <div
        className="c15"
      />
    </div>
  </div>
</div>
`;
